Support better bootstrap defaults
git-svn-id: https://svn.jboss.org/repos/jbossas/projects/jboss-osgi/projects/spi/trunk@95922 84be2c1e-ba19-0410-b317-a758671a6fc1